--- a/index.html
+++ b/index.html
@@ -480,15 +480,7 @@
     <header class="hero">
         <div class="container">
             <div class="logo-section">
-                <!-- Antler Icon (SVG) - Weiß für grünen Hintergrund -->
-<svg class="antler-icon" viewBox="0 0 200 150" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-    <path d="M70,120 Q70,100 60,80 Q55,65 45,55 Q40,50 35,48 M70,120 Q70,90 55,70 Q50,62 42,58 M70,120 Q70,80 50,60 Q45,55 38,52 M130,120 Q130,100 140,80 Q145,65 155,55 Q160,50 165,48 M130,120 Q130,90 145,70 Q150,62 158,58 M130,120 Q130,80 150,60 Q155,55 162,52" 
-          stroke="#FFFFFF" 
-          stroke-width="12" 
-          fill="none" 
-          stroke-linecap="round" 
-          stroke-linejoin="round"/>
-</svg>
+                <img src="antlers.png" alt="Disce Logo" class="antler-icon">
                 
                 <h1 class="brand-name">DISCE!</h1>
                 <p class="pronunciation">/ˈdɪs.t͡se/</p>
