--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@ header, main, footer {
                 <p class="tagline">Sag, was Du meinst.</p>
                 
                 <div class="hero-cta">
-                    <a href="#contact" class="btn-outline">Jetzt kontaktieren</a>
+                    <a href="#contact" class="btn-outline">Sag uns, was du meinst!</a>
                 </div>
             </div>
         </div>
