--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
             background-color: var(--color-bg);
             -webkit-font-smoothing: antialiased;
             -moz-osx-font-smoothing: grayscale;
+            position: relative;
         }
         
         .container {
@@ -530,7 +531,7 @@ header, main, footer {
 
 /* Fuchs auf der Kante */
 .footer-fox {
-    position: fixed;
+    position: absolute;
     bottom: 60px;
     right: 5%;
     width: 120px;
