--- a/index.html
+++ b/index.html
@@ -615,20 +615,37 @@ header, main, footer {
 }
 
 /* Fuchs auf der Kante */
-.footer-fox {
+/* Fuchs-Link auf der Kante */
+.footer-fox-link {
     position: absolute;
     bottom: 60px;
     right: 5%;
+    z-index: 999;
+    transition: transform 180ms ease-out;
+    cursor: pointer;
+}
+
+.footer-fox-link:hover {
+    transform: translateY(-4px);
+}
+
+.footer-fox-link:active {
+    transform: translateY(-2px);
+}
+
+.footer-fox {
     width: 120px;
     height: auto;
-    z-index: 999;
-    pointer-events: none;
+    display: block;
 }
 
 @media (max-width: 768px) {
+    .footer-fox-link {
+        bottom: 50px;
+    }
+    
     .footer-fox {
         width: 80px;
-        bottom: 50px;
     }
 }
 
@@ -866,7 +883,9 @@ window.addEventListener('scroll', function() {
 
        <!-- Footer mit Fuchs -->
     <div class="footer-wrapper">
-        <img src="Fuchs.png" alt="" class="footer-fox">
+        <a href="https://substack.com/@disce" target="_blank" rel="noopener noreferrer" class="footer-fox-link">
+    <img src="Fuchs.png" alt="Besuche unseren Substack" class="footer-fox">
+</a>
         
         <footer class="footer">
             <div class="container">
