--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Disce – Sprachcoaching für B2-C2 Lernende. Präzise sprechen und schreiben lernen.">
     <title>DISCE! – Sag, was Du meinst.</title>
+
+    <!-- Favicon -->
+<link rel="icon" type="image/png" sizes="32x32" href="BrowserIcon.png">
+<link rel="icon" type="image/png" sizes="16x16" href="BrowserIcon.png">
+<link rel="apple-touch-icon" sizes="180x180" href="BrowserIcon.png">
+<link rel="shortcut icon" href="BrowserIcon.png">
     
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
