--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ header, main, footer {
 
 .synonym-search {
     padding: 3rem 0 2rem;
-    background: linear-gradient(135deg, var(--color-primary-light) 0%, var(--color-white) 100%);
+    background: var(--color-bg);
 }
 
 .synonym-card {
