--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <title>DISCE! – Sag, was Du meinst.</title>
 
 <!-- Favicon -->
-<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png?v=2">
-<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png?v=2">
-<link rel="apple-touch-icon" sizes="180x180" href="favicon-180x180.png?v=2">
-<link rel="shortcut icon" href="favicon-32x32.png?v=2">
+<link rel="icon" type="image/png" sizes="16x16" href="BrowserIcon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="BrowserIcon.png">
+<link rel="apple-touch-icon" sizes="180x180" href="BrowserIcon.png">
+<link rel="shortcut icon" href="BrowserIcon.png">
     
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
