--- a/index.html
+++ b/index.html
@@ -291,27 +291,40 @@ header, main, footer {
     color: var(--color-text);
 }
 
-/* Substack Sidebar (rechts, wird sticky) */
+/* Substack Sidebar (rechts, wird sticky mit scroll) */
 .substack-sidebar {
     position: relative;
     width: 340px;
     flex-shrink: 0;
     transition: all 0.3s ease-out;
+    max-height: none;
+    overflow-y: visible;
 }
 
 .substack-sidebar.is-sticky {
     position: fixed;
     top: 100px;
     right: calc((100vw - 1400px) / 2 + var(--space-xl));
+    max-height: calc(100vh - 120px);
+    overflow-y: auto;
+    padding-right: 8px;
 }
 
 .substack-sidebar::-webkit-scrollbar {
     width: 6px;
 }
 
+.substack-sidebar::-webkit-scrollbar-track {
+    background: transparent;
+}
+
 .substack-sidebar::-webkit-scrollbar-thumb {
     background: rgba(92, 184, 92, 0.3);
     border-radius: 4px;
+}
+
+.substack-sidebar::-webkit-scrollbar-thumb:hover {
+    background: rgba(92, 184, 92, 0.5);
 }
 
 /* Search Box */
@@ -799,6 +812,8 @@ header, main, footer {
         margin: var(--space-2xl) auto 0;
         top: auto !important;
         right: auto !important;
+        max-height: none !important;
+        overflow-y: visible !important;
     }
     
     .substack-sidebar.is-sticky {
