--- a/index.html
+++ b/index.html
@@ -270,12 +270,15 @@ header, main, footer {
     gap: var(--space-3xl);
     align-items: flex-start;
     padding: 3rem 0 2rem;
+    max-width: 1400px;
+    margin: 0 auto;
 }
 
 /* Synonym-Suche (links) */
 .synonym-search {
     flex: 1;
     max-width: 600px;
+    width: 100%;
 }
 
 .synonym-card {
