--- a/index.html
+++ b/index.html
@@ -284,8 +284,8 @@ header, main, footer {
   max-height: calc(100vh - 120px);
   overflow-y: auto;
   padding-right: 8px;
+  border-radius: 12px;
 }
-
 
 .substack-sidebar::-webkit-scrollbar {
     width: 6px;
