--- a/index.html
+++ b/index.html
@@ -682,6 +682,28 @@ header, main, footer {
     border-color: var(--color-error);
 }
 
+
+    /* ===========================
+   PROJECT INSIGHTS SECTION
+   =========================== */
+.project-insights {
+    padding: var(--space-xl) 0 var(--space-2xl);
+}
+
+.insights-card {
+    animation-delay: 0.6s;
+}
+
+.insights-card h2 {
+    font-family: var(--font-heading);
+    font-size: 24px;
+    font-weight: 700;
+    color: var(--color-text);
+    margin: 0;
+    text-align: center;
+}
+
+
 /* ===========================
    BUTTONS
    =========================== */
@@ -1022,6 +1044,15 @@ header, main, footer {
                 </div>
             </div>
         </section>
+
+        <!-- Projektfortschritt Section -->
+<section class="project-insights">
+    <div class="container">
+        <div class="card insights-card">
+            <h2>Projektfortschritt/Einsichten</h2>
+        </div>
+    </div>
+</section>
 
         <!-- Contact Section -->
         <section id="contact" class="contact">
