--- a/index.html
+++ b/index.html
@@ -894,6 +894,88 @@ header, main, footer {
         scroll-behavior: auto !important;
     }
 }
+
+/* ===========================
+   MODAL
+   =========================== */
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+    backdrop-filter: blur(4px);
+    animation: fadeIn 0.3s ease-out;
+}
+
+.modal.show {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.modal-content {
+    background: var(--color-cream);
+    border-radius: var(--radius-lg);
+    padding: var(--space-3xl);
+    max-width: 600px;
+    width: 90%;
+    max-height: 80vh;
+    overflow-y: auto;
+    position: relative;
+    box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
+    animation: slideUp 0.3s ease-out;
+}
+
+@keyframes slideUp {
+    from {
+        opacity: 0;
+        transform: translateY(30px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+.modal-close {
+    position: absolute;
+    top: var(--space-lg);
+    right: var(--space-xl);
+    font-size: 32px;
+    font-weight: 300;
+    color: var(--color-text-muted);
+    cursor: pointer;
+    line-height: 1;
+    transition: color 140ms;
+}
+
+.modal-close:hover {
+    color: var(--color-text);
+}
+
+.modal-content h2 {
+    font-family: var(--font-heading);
+    font-size: 32px;
+    font-weight: 700;
+    color: var(--color-text);
+    margin-bottom: var(--space-xl);
+}
+
+.team-intro p {
+    font-size: 16px;
+    line-height: 1.7;
+    color: var(--color-text-secondary);
+    margin-bottom: var(--space-lg);
+}
+
+.team-intro p:last-child {
+    margin-bottom: 0;
+}
+
 </style>
     
 </head>
@@ -1362,5 +1444,59 @@ header, main, footer {
         // Beim Laden der Seite ausführen
         document.addEventListener('DOMContentLoaded', loadSubstackPosts);
     </script>
+
+<script>
+// Modal Funktionalität
+const aboutModal = document.getElementById('aboutModal');
+const aboutCard = document.querySelector('.info-card[href="#about"]');
+const closeBtn = document.querySelector('.modal-close');
+
+// Öffne Modal beim Klick auf "Über uns"
+if (aboutCard) {
+    aboutCard.addEventListener('click', function(e) {
+        e.preventDefault();
+        aboutModal.classList.add('show');
+        document.body.style.overflow = 'hidden'; // Verhindert Scrollen im Hintergrund
+    });
+}
+
+// Schließe Modal beim Klick auf X
+if (closeBtn) {
+    closeBtn.addEventListener('click', function() {
+        aboutModal.classList.remove('show');
+        document.body.style.overflow = ''; // Aktiviert Scrollen wieder
+    });
+}
+
+// Schließe Modal beim Klick außerhalb
+aboutModal.addEventListener('click', function(e) {
+    if (e.target === aboutModal) {
+        aboutModal.classList.remove('show');
+        document.body.style.overflow = '';
+    }
+});
+
+// Schließe Modal mit ESC-Taste
+document.addEventListener('keydown', function(e) {
+    if (e.key === 'Escape' && aboutModal.classList.contains('show')) {
+        aboutModal.classList.remove('show');
+        document.body.style.overflow = '';
+    }
+});
+</script>
+
+
+<!-- Über Uns Modal -->
+<div id="aboutModal" class="modal">
+    <div class="modal-content">
+        <span class="modal-close">&times;</span>
+        <h2>Über uns</h2>
+        <div class="team-intro">
+            <p>Hier kommt die Teamvorstellung...</p>
+            <p>Du kannst hier mehrere Absätze, Bilder oder andere Inhalte einfügen.</p>
+        </div>
+    </div>
+</div>
+    
 </body>
 </html>
