--- a/index.html
+++ b/index.html
@@ -1448,7 +1448,7 @@ header, main, footer {
 <script>
 // Modal Funktionalität
 const aboutModal = document.getElementById('aboutModal');
-const aboutCard = document.querySelector('.info-card[href="#about"]');
+const aboutCard = document.querySelector('.info-card[href="#uber-uns"]');
 const closeBtn = document.querySelector('.modal-close');
 
 // Öffne Modal beim Klick auf "Über uns"
