Fix typo in mission statement paragraph

--- a/index.html
+++ b/index.html
@@ -1541,7 +1541,7 @@ document.addEventListener('DOMContentLoaded', function() {
         <span class="modal-close">&times;</span>
         <h2>Unsere Mission</h2>
         <div class="team-intro">
-            <p>Sprache ist Dein Lebensvorteil</p>
+            <p>Sprache ist Dein Lebensvorteil.</p>
             <p>Die Mission von Disce ist es, Sprache zu einem echten Lebensvorteil zu machen, indem wir die Lücke zwischen Absicht und Wirkung schließen.
 Wir coachen gesprochenes und geschriebenes Wort in realen Situationen, abgestimmt auf deine selbstgesetzte Ziele. Dabei nutzen wir zielorientiertes Lernen und multidimensionale Analysen, um messbare Leistung und echte Teilhabe innerhalb der DACH-Region zu ermöglichen.
 Denn eine Sprache zu lernen heißt, sie zu leben. Wir sorgen dafür, dass deine Ideen in jedem Kontext wirklich ankommen und du sagen kannst, was du wirklich meinst.</p>
